2021年10月23日 星期六 11时23分48秒 CST update pgroonga to v2.3.2 
update pg to v14.1 pgroonga to v2.3.4
upgrade to pg v14.2

upgrade to pg v14.3; pgroonga to v2.3.7
upgrade to pg v14.4

upgrade to pg v14.6; pgroonga to v2.4.4

upgrade to pg v15.1

upgrade to pg v15.2
upgrade to pgroonga 3.0.1

upgrade to pg v15.3; pgroonga to 3.0.2

upgrade to postgres:15.3-bookworm; pgroonga to 3.1.1
upgrade to postgres:15.4-bookworm; pgroonga to 3.1.3

upgrade to postgres:16.0-bookworm; pgroonga to 3.1.5
upgrade to postgres:16.1-bookworm; pgroonga to 3.1.5
upgrade to postgres:16.2-bookworm; pgroonga to 3.1.7
upgrade to postgres:16.3-bookworm; pgroonga to 3.2.1

upgrade to postgres:16.4-bookworm; pgroonga to 3.2.2

upgrade to postgres:17.2-bookworm; pgroonga to 3.2.5

upgrade to postgres:17.4-bookworm; pgroonga to 4.0.1

upgrade to postgres:17.5-bookworm; pgroonga to 4.0.1

upgrade to postgres:17.6-bookworm; pgroonga to 4.0.1